src/test/deca/context/invalid/void_type.deca
// Description:
//    Programme declarant une variable type void .
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : It's void type
//
// Historique:
//    cree le 06/01/2025

{   
   void x;
}